# spotify_dlp

./: .gitattributes  .gitignore  CMakeLists.txt  todo.md
docs/rust/: rs
include/: spotify-dlp.cpp  spotify-dlp.h
src/: main.cpp
src/api/: api.cpp  api.h  explain.md  metadata.cpp  metadata.h
src/cli/: explain.md
src/dlp/: dlp.h
src/dlp/spotify/: api.cpp  api.h  metadata.cpp  metadata.h
src/dlp/youtube/: search_builder.cpp  search_builder.h  youtube.cpp  youtube.h  yt-dlp-data.h  yt-dlp.cpp  yt-dlp.h
src/dlp/youtube/data/: yt-dlp-data-linux.cpp  yt-dlp-data-windows.cpp  yt-dlp-data.h
src/utils/: curl_utils.cpp  curl_utils.h  logger.h
tests/: CMakeLists.txt  api_test.cpp  log_test.cpp  youtube_search_builder_test.cpp  yt_dlp_test.cpp
tests/dlp/youtube/: youtube_search_builder_test.cpp  youtube_test.cpp  yt_dlp_test.cpp
